src/components/subheader/Subheader.module.css
.subheader {
  align-items: center;
  background-color: var(--white);
  border-bottom: 1px solid var(--gray-3);
  display: flex;
  flex-direction: column;
  gap: 16px;
  justify-content: flex-start;
  left: 0;
  padding: 20px;
  position: fixed;
  right: 0;
  top: var(--header-height);
  z-index: 1;
}

.subheader > button:first-of-type,
.subheader > a:first-of-type {
  margin-left: auto;
}

.titles {
  align-items: center;
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.subtitle {
  color: var(--gray-2);
  font-size: var(--font-x-small);
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.divider {
  display: none;
}

.close {
  position: absolute;
  right: 20px;
  top: 20px;
}

@media (min-width: 1160px) {
  .subheader {
    flex-direction: row;
    height: 72px;
    padding: 0 32px;
  }

  .divider {
    background-color: var(--gray-2);
    display: block;
    height: 14px;
    width: 1px;
  }

  .titles {
    gap: 20px;
    justify-content: flex-start;
    width: auto;
  }
}

